@@ -1,3 +1,7 @@
+2013-06-19  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/PJ_healpix.c: correct various warnings about unused variables.
+
 2013-06-19  Frank Warmerdam  <warmerdam@google.com>
 
 	* src/pj_mutex.c, configure.in: Ensure that the core mutex lock
